// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table Chart renders 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-gvTkRN dMwOev"
    style={
      Object {
        "height": 446,
      }
    }
  >
    <div
      className="sc-jPGeSq gszGVP"
    >
      <button
        className="sc-eBOYpw iMBohg"
        onClick={[Function]}
      >
        <svg
          className="sc-kgflAQ sc-uoHVL  isXlMb"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.556 6.068a.5.5 0 00-.503.864l.503-.864zM16 8.652l.417.276a.5.5 0 00-.165-.708L16 8.652zm-2.634 3.065a.5.5 0 00.833.553l-.833-.553zm8.695-1.238a.5.5 0 00-.67.742l.67-.742zM12.053 6.932l3.695 2.152.504-.864-3.696-2.152-.503.864zm3.53 1.444l-2.217 3.341.833.553 2.218-3.342-.834-.552zm8.417 8.7C24 21.448 20.422 25 16 25v1c4.966 0 9-3.991 9-8.924h-1zM16 25c-4.422 0-8-3.552-8-7.924H7C7 22.009 11.034 26 16 26v-1zm-8-7.924c0-4.372 3.578-7.924 8-7.924v-1c-4.966 0-9 3.991-9 8.924h1zm13.39-5.855A7.868 7.868 0 0124 17.076h1a8.869 8.869 0 00-2.94-6.597l-.67.742z"
            fill="currentColor"
          />
        </svg>
      </button>
      <div />
      <button
        className="sc-eBOYpw krbLIq"
        onClick={[Function]}
      >
        <svg
          className="sc-gUAEMC"
          fill="none"
          fontSize="1.5rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 6.5v14.616m0 0l-4.384-4.385M16 21.115l4.385-4.384M6.5 18.923v3.654A2.923 2.923 0 009.423 25.5h13.154a2.923 2.923 0 002.923-2.923v-3.654"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
      <button
        className="sc-eBOYpw krbLIq"
        onClick={[Function]}
      >
        <svg
          className="sc-eKszNL"
          fill="none"
          fontSize="1.5rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.5 12.832V6.5h6.334m-6.33 0l18.998 19m-6.334-.005H25.5v-6.332m0-6.331V6.5h-6.334m6.33 0L6.5 25.5m6.334-.005H6.501v-6.332"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
    <div
      className="sc-dkHWjp eqPeb"
    >
      <div
        className="sc-KsaEj XGNBu"
      >
        <svg
          fill="none"
          height="40"
          viewBox="0 0 40 40"
          width="40"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.438 30.102H35.4v6.896H5.438v-6.896z"
            fill="url(#icon_1_svg__paint0_linear)"
          />
          <path
            d="M37.657 11.988l-2.252 9.057v9.057H5.443v-9.057L3.19 11.988l3.54-1.77 6.483 6.482 4.529-8.506h5.287l4.53 8.506 6.558-6.482 3.54 1.77z"
            fill="url(#icon_1_svg__paint1_linear)"
          />
          <path
            d="M3.525 12.655C1.624 12.655 0 11.108 0 9.207s1.624-3.448 3.525-3.448a3.452 3.452 0 013.448 3.448 3.452 3.452 0 01-3.448 3.448z"
            fill="url(#icon_1_svg__paint2_linear)"
          />
          <path
            d="M36.551 12.86a3.452 3.452 0 01-3.448-3.448 3.452 3.452 0 013.448-3.448A3.452 3.452 0 0140 9.412a3.452 3.452 0 01-3.449 3.448z"
            fill="url(#icon_1_svg__paint3_linear)"
          />
          <path
            d="M20.341 2a3.443 3.443 0 00-3.448 3.448 3.444 3.444 0 003.448 3.448 3.444 3.444 0 003.449-3.448A3.443 3.443 0 0020.34 2z"
            fill="url(#icon_1_svg__paint4_linear)"
          />
          <path
            d="M6.592 18.608l-3.449 5.747 3.449 5.748 3.448-5.748-3.448-5.747z"
            fill="#CB75F6"
          />
          <path
            d="M23.834 24.355l-3.448 5.748-3.449-5.748 3.448-5.747 3.449 5.747z"
            fill="#FF6C6C"
          />
          <path
            d="M23.831 24.355l-3.448 5.747V18.607l3.448 5.748z"
            fill="#FF4949"
          />
          <path
            d="M34.254 18.608l-3.449 5.747 3.449 5.748 3.448-5.748-3.448-5.747z"
            fill="#B760EA"
          />
          <path
            d="M3.141 28.952h34.56v2.299H3.14v-2.299zM3.142 35.849h34.56v2.299H3.142v-2.3z"
            fill="#FFE470"
          />
          <defs>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="icon_1_svg__paint0_linear"
              x1={10.215}
              x2={37.735}
              y1={34.64}
              y2={35.206}
            >
              <stop
                stopColor="#FFD60A"
              />
              <stop
                offset={1}
                stopColor="#FFD60A"
                stopOpacity={0}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="icon_1_svg__paint1_linear"
              x1={8.685}
              x2={40.355}
              y1={22.612}
              y2={22.848}
            >
              <stop
                stopColor="#FFD60A"
              />
              <stop
                offset={1}
                stopColor="#FFD60A"
                stopOpacity={0}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="icon_1_svg__paint2_linear"
              x1={1.114}
              x2={6.723}
              y1={12.584}
              y2={6.802}
            >
              <stop
                stopColor="#FDBF00"
              />
              <stop
                offset={1}
                stopColor="#FDBF00"
                stopOpacity={0}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="icon_1_svg__paint3_linear"
              x1={34.205}
              x2={39.816}
              y1={12.789}
              y2={7.069}
            >
              <stop
                stopColor="#FDBF00"
              />
              <stop
                offset={1}
                stopColor="#FDBF00"
                stopOpacity={0}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="icon_1_svg__paint4_linear"
              x1={17.995}
              x2={23.606}
              y1={8.825}
              y2={3.105}
            >
              <stop
                stopColor="#FDBF00"
              />
              <stop
                offset={1}
                stopColor="#FDBF00"
                stopOpacity={0}
              />
            </linearGradient>
          </defs>
        </svg>
      </div>
      <p
        className="sc-cbDwiu sc-iCxJSg LFNaq hZDxoa"
        size={20}
      >
        Top Players
      </p>
      <div
        className="sc-fgjZeG"
      >
        <div
          className="sc-gchOna dHcOqC"
        >
          <button
            className="sc-bGpPMD kGWvQu"
            onClick={[Function]}
          >
            <p
              className="sc-cbDwiu sc-kzriHz cHxPAS pAXwV"
              size={14}
            >
              by GGR
            </p>
            <svg
              className="sc-cTQhss"
              fill="none"
              fontSize="1.5rem"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25 11.5l-9 9-9-9"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      className="sc-iiHhKi kpbaKA"
    >
      <div
        className="sc-jmjsKF bmMYOo"
      >
        <div
          className="sc-hsfgio eNWXOR"
          opacity={0}
        >
          <span
            className="sc-eBOtmg iVIrSA"
          >
            1
          </span>
        </div>
        <div
          className="sc-hsfgio dKQYya"
          opacity={0}
        >
          <div
            className="sc-fWuLJ cKIxNF"
          >
            <span
              style={
                Object {
                  "maxWidth": "80px",
                  "overflow": "hidden",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                }
              }
              title=" C593088487C593088487C593 "
            >
               C593088487C593088487C593 
            </span>
          </div>
        </div>
        <div
          className="sc-hsfgio icgpki"
          opacity={0}
        >
          <div
            className="sc-ftNBoD hWicxi"
          >
            6,222.405
          </div>
        </div>
        <div
          className="sc-hsfgio eNWXOR"
          opacity={0}
        >
          <span
            className="sc-eBOtmg iVIrSA"
          >
            2
          </span>
        </div>
        <div
          className="sc-hsfgio dKQYya"
          opacity={0}
        >
          <div
            className="sc-fWuLJ cKIxNF"
          >
            C593088487
          </div>
        </div>
        <div
          className="sc-hsfgio icgpki"
          opacity={0}
        >
          <div
            className="sc-ftNBoD hWicxi"
          >
            6,222.405
          </div>
        </div>
        <div
          className="sc-hsfgio eNWXOR"
          opacity={0}
        >
          <span
            className="sc-eBOtmg iVIrSA"
          >
            3
          </span>
        </div>
        <div
          className="sc-hsfgio dKQYya"
          opacity={0}
        >
          <div
            className="sc-fWuLJ cKIxNF"
          >
            C593088487
          </div>
        </div>
        <div
          className="sc-hsfgio icgpki"
          opacity={0}
        >
          <div
            className="sc-ftNBoD hWicxi"
          >
            6,222.405
          </div>
        </div>
        <div
          className="sc-hsfgio eNWXOR"
          opacity={0}
        >
          <span
            className="sc-eBOtmg iVIrSA"
          >
            4
          </span>
        </div>
        <div
          className="sc-hsfgio dKQYya"
          opacity={0}
        >
          <div
            className="sc-fWuLJ cKIxNF"
          >
            C593088487
          </div>
        </div>
        <div
          className="sc-hsfgio icgpki"
          opacity={0}
        >
          <div
            className="sc-ftNBoD hWicxi"
          >
            6,222.405
          </div>
        </div>
        <div
          className="sc-hsfgio eNWXOR"
          opacity={0}
        >
          <span
            className="sc-eBOtmg iVIrSA"
          >
            5
          </span>
        </div>
        <div
          className="sc-hsfgio dKQYya"
          opacity={0}
        >
          <div
            className="sc-fWuLJ cKIxNF"
          >
            C593088487
          </div>
        </div>
        <div
          className="sc-hsfgio icgpki"
          opacity={0}
        >
          <div
            className="sc-ftNBoD hWicxi"
          >
            6,222.405
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-gvTkRN dMwOev"
    style={
      Object {
        "height": 446,
      }
    }
  >
    <div
      className="sc-jPGeSq gszGVP"
    >
      <button
        className="sc-eBOYpw krbLIq"
        onClick={[Function]}
      >
        <div
          className="sc-jNxMLV kgFUAz"
          color="piccolo.100"
          size="twoxsmall"
        >
          <div />
          <div />
          <div />
          <div />
        </div>
      </button>
      <div />
      <button
        className="sc-eBOYpw krbLIq"
        onClick={[Function]}
      >
        <svg
          className="sc-gUAEMC"
          fill="none"
          fontSize="1.5rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 6.5v14.616m0 0l-4.384-4.385M16 21.115l4.385-4.384M6.5 18.923v3.654A2.923 2.923 0 009.423 25.5h13.154a2.923 2.923 0 002.923-2.923v-3.654"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
      <button
        className="sc-eBOYpw krbLIq"
        onClick={[Function]}
      >
        <svg
          className="sc-eKszNL"
          fill="none"
          fontSize="1.5rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.5 12.832V6.5h6.334m-6.33 0l18.998 19m-6.334-.005H25.5v-6.332m0-6.331V6.5h-6.334m6.33 0L6.5 25.5m6.334-.005H6.501v-6.332"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
    <div
      className="sc-dkHWjp eqPeb"
    >
      <div
        className="sc-KsaEj XGNBu"
      >
        <svg
          fill="none"
          height="40"
          viewBox="0 0 40 40"
          width="40"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M26.45 38.45a3.55 3.55 0 100-7.1 3.55 3.55 0 000 7.1z"
            fill="url(#Providers_svg__paint0_linear)"
          />
          <path
            d="M8.5 14a6 6 0 100-12 6 6 0 000 12z"
            fill="url(#Providers_svg__paint1_linear)"
            opacity={0.75}
          />
          <path
            d="M20.25 35.95c8.063 0 14.6-6.537 14.6-14.6 0-8.063-6.537-14.6-14.6-14.6-8.063 0-14.6 6.537-14.6 14.6 0 8.063 6.537 14.6 14.6 14.6z"
            fill="url(#Providers_svg__paint2_linear)"
          />
          <path
            d="M33.75 8.5a2.9 2.9 0 100-5.8 2.9 2.9 0 000 5.8z"
            fill="#B760EA"
          />
          <path
            d="M36.65 26.25a1.15 1.15 0 100-2.3 1.15 1.15 0 000 2.3z"
            fill="url(#Providers_svg__paint3_linear)"
            opacity={0.83}
          />
          <path
            d="M5.55 35.95a2.95 2.95 0 100-5.9 2.95 2.95 0 000 5.9z"
            fill="url(#Providers_svg__paint4_linear)"
            opacity={0.8}
          />
          <path
            d="M22.95 9.65a1.15 1.15 0 100-2.3 1.15 1.15 0 000 2.3z"
            fill="url(#Providers_svg__paint5_linear)"
            opacity={0.83}
          />
          <defs>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Providers_svg__paint0_linear"
              x1={24.035}
              x2={29.811}
              y1={38.376}
              y2={32.487}
            >
              <stop
                stopColor="#FDBF00"
              />
              <stop
                offset={1}
                stopColor="#FDBF00"
                stopOpacity={0}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Providers_svg__paint1_linear"
              x1={12.371}
              x2={16.565}
              y1={-6.018}
              y2={13.373}
            >
              <stop
                offset={0.271}
                stopColor="#26BE6C"
              />
              <stop
                offset={0.771}
                stopColor="#77EA77"
              />
              <stop
                offset={1}
                stopColor="#6CEC80"
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Providers_svg__paint2_linear"
              x1={-33.44}
              x2={48.823}
              y1={-27.631}
              y2={5.644}
            >
              <stop
                stopColor="#1757FF"
                stopOpacity={0.7}
              />
              <stop
                offset={1}
                stopColor="#1757FF"
                stopOpacity={0}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Providers_svg__paint3_linear"
              x1={5.214}
              x2={19.581}
              y1={-0.22}
              y2={11.339}
            >
              <stop
                stopColor="#F0763B"
              />
              <stop
                offset={0.998}
                stopColor="#D6537D"
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Providers_svg__paint4_linear"
              x1={2.898}
              x2={8.615}
              y1={31.601}
              y2={33.626}
            >
              <stop
                stopColor="#F85473"
              />
              <stop
                offset={0.22}
                stopColor="#F2627C"
              />
              <stop
                offset={0.46}
                stopColor="#F58697"
              />
              <stop
                offset={0.72}
                stopColor="#F79CA5"
              />
              <stop
                offset={0.98}
                stopColor="#FABCB9"
              />
              <stop
                offset={1}
                stopColor="#FABEBA"
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Providers_svg__paint5_linear"
              x1={7.908}
              x2={22.275}
              y1={-3.57}
              y2={7.99}
            >
              <stop
                stopColor="#F0763B"
              />
              <stop
                offset={0.998}
                stopColor="#D6537D"
              />
            </linearGradient>
          </defs>
        </svg>
      </div>
      <p
        className="sc-cbDwiu sc-iCxJSg LFNaq hZDxoa"
        size={20}
      >
        Top Suppliers
      </p>
      <div
        className="sc-fgjZeG"
      >
        <div
          className="sc-gchOna dHcOqC"
        >
          <button
            className="sc-bGpPMD kGWvQu"
            onClick={[Function]}
          >
            <p
              className="sc-cbDwiu sc-kzriHz cHxPAS pAXwV"
              size={14}
            >
              by GGR
            </p>
            <svg
              className="sc-cTQhss"
              fill="none"
              fontSize="1.5rem"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25 11.5l-9 9-9-9"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      className="sc-iiHhKi kpbaKA"
    >
      <div
        className="sc-jmjsKF bmMYOo"
      >
        <div
          className="sc-hsfgio eNWXOR"
          opacity={0}
        >
          <span
            className="sc-eBOtmg iVIrSA"
          >
            1
          </span>
        </div>
        <div
          className="sc-hsfgio dKQYya"
          opacity={0}
        >
          <div
            className="sc-fWuLJ cKIxNF"
          >
            <svg
              className="sc-jvdzsS hxKgrm"
              fill="none"
              height="24px"
              viewBox="0 0 32 32"
              width="24px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clipRule="evenodd"
                d="M16.4264 23.4142C20.395 23.4142 23.6121 20.1995 23.6121 16.2339C23.6121 12.2683 20.395 9.05358 16.4264 9.05358C12.4579 9.05358 9.24074 12.2683 9.24074 16.2339C9.24074 20.1995 12.4579 23.4142 16.4264 23.4142ZM16.4264 25.8004C21.7138 25.8004 26 21.5173 26 16.2339C26 10.9505 21.7138 6.66745 16.4264 6.66745C11.1391 6.66745 6.85283 10.9505 6.85283 16.2339C6.85283 21.5173 11.1391 25.8004 16.4264 25.8004Z"
                fill="currentColor"
                fillRule="evenodd"
              />
              <path
                d="M10.6286 15.4504C13.1849 15.4504 15.2573 13.3796 15.2573 10.8252C15.2573 8.27078 13.1849 6.20001 10.6286 6.20001C8.07231 6.20001 6 8.27078 6 10.8252C6 13.3796 8.07231 15.4504 10.6286 15.4504Z"
                fill="#49B356"
              />
            </svg>
            <p
              className="sc-cbDwiu cHxPAS"
              size={14}
            >
              Sportsbet
            </p>
          </div>
        </div>
        <div
          className="sc-hsfgio icgpki"
          opacity={0}
        >
          <div
            className="sc-ftNBoD hWicxi"
          >
            6,222.405
          </div>
        </div>
        <div
          className="sc-hsfgio eNWXOR"
          opacity={0}
        >
          <span
            className="sc-eBOtmg iVIrSA"
          >
            2
          </span>
        </div>
        <div
          className="sc-hsfgio dKQYya"
          opacity={0}
        >
          <div
            className="sc-fWuLJ cKIxNF"
          >
            <svg
              className="sc-iUjRoI eDMNrC"
              fill="none"
              height="24px"
              viewBox="0 0 32 32"
              width="24px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.3308 5C16.9215 5 19.8322 7.90386 19.839 11.4946C19.839 15.0853 16.9351 17.996 13.3444 18.0028C9.75366 18.0028 6.84299 15.0989 6.83619 11.5082C6.83619 11.5082 6.83619 11.5082 6.83619 11.5014C6.82939 7.91067 9.74006 5 13.3308 5Z"
                fill="#06BEE1"
                opacity={0.8}
              />
              <path
                d="M16.9284 25.9187C20.5153 25.9187 23.423 23.011 23.423 19.4241C23.423 15.8373 20.5153 12.9295 16.9284 12.9295C13.3416 12.9295 10.4338 15.8373 10.4338 19.4241C10.4338 23.011 13.3416 25.9187 16.9284 25.9187Z"
                fill="#1768AC"
                opacity={0.8}
              />
              <path
                d="M10.1277 16.2346C12.9567 16.2346 15.2553 18.5264 15.2553 21.3623C15.2553 24.1913 12.9635 26.4899 10.1277 26.4899C7.29861 26.4899 5 24.1981 5 21.3623C5 18.5332 7.29181 16.2346 10.1277 16.2346Z"
                fill="#2541B2"
                opacity={0.8}
              />
              <path
                d="M23.4365 22.1511C25.4046 22.1511 27 20.5557 27 18.5876C27 16.6195 25.4046 15.0241 23.4365 15.0241C21.4684 15.0241 19.873 16.6195 19.873 18.5876C19.873 20.5557 21.4684 22.1511 23.4365 22.1511Z"
                fill="#03256C"
                opacity={0.8}
              />
            </svg>
            <p
              className="sc-cbDwiu cHxPAS"
              size={14}
            >
              Hub88
            </p>
          </div>
        </div>
        <div
          className="sc-hsfgio icgpki"
          opacity={0}
        >
          <div
            className="sc-ftNBoD hWicxi"
          >
            6,222.405
          </div>
        </div>
        <div
          className="sc-hsfgio eNWXOR"
          opacity={0}
        >
          <span
            className="sc-eBOtmg iVIrSA"
          >
            3
          </span>
        </div>
        <div
          className="sc-hsfgio dKQYya"
          opacity={0}
        >
          <div
            className="sc-fWuLJ cKIxNF"
          >
            <svg
              className="sc-jSPclO hrjWYJ"
              fill="none"
              height="24px"
              viewBox="0 0 32 32"
              width="24px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.336 6C14.9985 6 14.7224 6.28346 14.7224 6.62992C14.7224 6.99213 14.9985 7.25984 15.336 7.25984C15.6736 7.25984 15.9497 6.97638 15.9497 6.62992C15.9497 6.28346 15.6736 6 15.336 6Z"
                fill="#FF5111"
              />
              <path
                d="M15.336 24.7402C14.9985 24.7402 14.7224 25.0236 14.7224 25.3701C14.7224 25.7323 14.9985 26 15.336 26C15.6736 26 15.9497 25.7165 15.9497 25.3701C15.9497 25.0236 15.6736 24.7402 15.336 24.7402Z"
                fill="#FF5111"
              />
              <path
                d="M11.6541 9.77953C11.6541 9.43307 11.9302 9.14961 12.2677 9.14961C12.6053 9.14961 12.8814 9.43307 12.8814 9.77953C12.8814 10.126 12.6053 10.4094 12.2677 10.4094C11.9302 10.4094 11.6541 10.1417 11.6541 9.77953Z"
                fill="#FF5111"
              />
              <path
                d="M12.2677 12.5669C12.0683 12.5669 11.9149 12.7244 11.9149 12.9291C11.9149 13.1339 12.0683 13.2913 12.2677 13.2913C12.4672 13.2913 12.6206 13.1339 12.6206 12.9291C12.6206 12.7244 12.4672 12.5669 12.2677 12.5669Z"
                fill="#FF5111"
              />
              <path
                d="M9 12.9291C9 12.8189 9.09205 12.7244 9.19944 12.7244C9.30683 12.7244 9.39888 12.8189 9.39888 12.9291C9.39888 13.0394 9.30683 13.1339 9.19944 13.1339C9.09205 13.1339 9 13.0551 9 12.9291Z"
                fill="#FF5111"
              />
              <path
                d="M9.19944 15.6693C9.09205 15.6693 9 15.7638 9 15.874C9 15.9843 9.09205 16.0787 9.19944 16.0787C9.30683 16.0787 9.39888 15.9843 9.39888 15.874C9.39888 15.7638 9.30683 15.6693 9.19944 15.6693Z"
                fill="#FF5111"
              />
              <path
                d="M9 19.2283C9 19.1181 9.09205 19.0236 9.19944 19.0236C9.30683 19.0236 9.39888 19.1181 9.39888 19.2283C9.39888 19.3386 9.30683 19.4331 9.19944 19.4331C9.09205 19.4331 9 19.3543 9 19.2283Z"
                fill="#FF5111"
              />
              <path
                d="M12.2677 15.5118C12.0683 15.5118 11.9149 15.6693 11.9149 15.874C11.9149 16.0787 12.0683 16.2362 12.2677 16.2362C12.4672 16.2362 12.6206 16.0787 12.6206 15.874C12.6206 15.6693 12.4672 15.5118 12.2677 15.5118Z"
                fill="#FF5111"
              />
              <path
                d="M11.9149 19.2283C11.9149 19.0236 12.0683 18.8661 12.2677 18.8661C12.4672 18.8661 12.6206 19.0236 12.6206 19.2283C12.6206 19.4331 12.4672 19.5906 12.2677 19.5906C12.0683 19.5906 11.9149 19.4331 11.9149 19.2283Z"
                fill="#FF5111"
              />
              <path
                d="M12.2677 21.748C11.9302 21.748 11.6541 22.0315 11.6541 22.378C11.6541 22.7402 11.9302 23.0079 12.2677 23.0079C12.6053 23.0079 12.8814 22.7244 12.8814 22.378C12.8814 22.0315 12.6053 21.748 12.2677 21.748Z"
                fill="#FF5111"
              />
              <path
                d="M14.3082 9.62205C14.3082 8.99213 14.7837 8.56693 15.336 8.56693C15.9497 8.56693 16.3639 9.05512 16.3639 9.62205C16.3639 10.189 15.8883 10.6772 15.336 10.6772C14.7224 10.6772 14.3082 10.189 14.3082 9.62205Z"
                fill="#FF5111"
              />
              <path
                d="M18.7112 8.72441C18.1589 8.72441 17.6833 9.14961 17.6833 9.77953C17.6833 10.3465 18.0975 10.8346 18.7112 10.8346C19.2635 10.8346 19.7391 10.3465 19.7391 9.77953C19.7391 9.2126 19.3248 8.72441 18.7112 8.72441Z"
                fill="#FF5111"
              />
              <path
                d="M17.6833 22.378C17.6833 21.748 18.1589 21.3228 18.7112 21.3228C19.3248 21.3228 19.7391 21.811 19.7391 22.378C19.7391 22.9449 19.2635 23.4331 18.7112 23.4331C18.0975 23.4331 17.6833 22.9449 17.6833 22.378Z"
                fill="#FF5111"
              />
              <path
                d="M18.7112 14.8661C18.1589 14.8661 17.6833 15.2913 17.6833 15.9213C17.6833 16.4882 18.0975 16.9764 18.7112 16.9764C19.2635 16.9764 19.7391 16.4882 19.7391 15.9213C19.7391 15.3543 19.3248 14.8661 18.7112 14.8661Z"
                fill="#FF5111"
              />
              <path
                d="M14.3082 22.2205C14.3082 21.5906 14.7837 21.1654 15.336 21.1654C15.9497 21.1654 16.3639 21.6535 16.3639 22.2205C16.3639 22.7874 15.8883 23.2756 15.336 23.2756C14.7224 23.2756 14.3082 22.7874 14.3082 22.2205Z"
                fill="#FF5111"
              />
              <path
                d="M15.336 11.3701C14.6917 11.3701 14.1241 11.8583 14.1241 12.6142C14.1241 13.2913 14.5996 13.874 15.336 13.8583C15.9804 13.8583 16.548 13.2756 16.548 12.6142C16.548 11.9528 16.0724 11.3701 15.336 11.3701Z"
                fill="#FF5111"
              />
              <path
                d="M14.1241 19.2283C14.1241 18.4724 14.6917 17.9843 15.336 17.9843C16.0724 17.9843 16.548 18.5669 16.548 19.2283C16.548 19.8898 15.9804 20.4724 15.336 20.4724C14.5996 20.4882 14.1241 19.9055 14.1241 19.2283Z"
                fill="#FF5111"
              />
              <path
                d="M20.8743 11.622C20.2607 11.9843 20.0305 12.7402 20.3681 13.3858C20.5828 13.7953 21.0431 14.0945 21.5187 14.0787C21.6874 14.0787 21.9175 14.0157 22.0863 13.9055C22.7 13.5433 22.9301 12.7874 22.5926 12.1417C22.2397 11.5118 21.5033 11.2756 20.8743 11.622Z"
                fill="#FF5111"
              />
              <path
                d="M14.0934 16.5512C13.7098 15.8268 13.9706 14.9764 14.6764 14.5827C15.3821 14.189 16.2105 14.4567 16.594 15.1811C16.9776 15.9055 16.7168 16.7559 16.0111 17.1496C15.8116 17.2756 15.5662 17.3543 15.3667 17.3543C14.8605 17.3386 14.3388 17.0236 14.0934 16.5512Z"
                fill="#FF5111"
              />
              <path
                d="M20.7516 17.7008C19.9999 18.126 19.7237 19.0394 20.1379 19.811C20.4141 20.2992 20.9664 20.6457 21.5033 20.6457C21.7181 20.6457 21.9943 20.5827 22.1937 20.4409C22.9454 20.0157 23.2216 19.1024 22.8074 18.3307C22.3931 17.5591 21.5033 17.2756 20.7516 17.7008Z"
                fill="#FF5111"
              />
            </svg>
            <p
              className="sc-cbDwiu cHxPAS"
              size={14}
            >
              Bitcasino
            </p>
          </div>
        </div>
        <div
          className="sc-hsfgio icgpki"
          opacity={0}
        >
          <div
            className="sc-ftNBoD hWicxi"
          >
            6,222.405
          </div>
        </div>
        <div
          className="sc-hsfgio eNWXOR"
          opacity={0}
        >
          <span
            className="sc-eBOtmg iVIrSA"
          >
            4
          </span>
        </div>
        <div
          className="sc-hsfgio dKQYya"
          opacity={0}
        >
          <div
            className="sc-fWuLJ cKIxNF"
          >
            <svg
              className="sc-jLOYlT hEGWak"
              fill="none"
              height="24px"
              viewBox="0 0 32 32"
              width="24px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clipRule="evenodd"
                d="M17.0956 18.9061C17.0956 21.0133 18.837 22.7216 20.9853 22.7216C23.1336 22.7216 24.875 21.0133 24.875 18.9061C24.875 16.7988 23.1336 15.0904 20.9853 15.0904C18.837 15.0904 17.0956 16.7988 17.0956 18.9061ZM11.7867 6C13.8781 6 15.5734 7.71453 15.5734 9.82935V18.5815C15.5734 21.8397 17.9369 24.1574 20.9853 24.1574C21.2665 24.1574 21.5424 24.1361 21.812 24.0953C20.352 25.2846 18.4759 26 16.4297 26C11.7741 26 8 22.2978 8 17.7311V9.82935C8 7.71453 9.69538 6 11.7867 6Z"
                fill="#D82E2E"
                fillRule="evenodd"
              />
            </svg>
            <p
              className="sc-cbDwiu cHxPAS"
              size={14}
            >
              Luckyslots
            </p>
          </div>
        </div>
        <div
          className="sc-hsfgio icgpki"
          opacity={0}
        >
          <div
            className="sc-ftNBoD hWicxi"
          >
            6,222.405
          </div>
        </div>
        <div
          className="sc-hsfgio eNWXOR"
          opacity={0}
        >
          <span
            className="sc-eBOtmg iVIrSA"
          >
            5
          </span>
        </div>
        <div
          className="sc-hsfgio dKQYya"
          opacity={0}
        >
          <div
            className="sc-fWuLJ cKIxNF"
          >
            <svg
              className="sc-jwYuju gVpese"
              fill="none"
              height="24px"
              viewBox="0 0 32 32"
              width="24px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18.7213 15.4743L17.0297 14.7977C15.7891 14.3466 15.0373 13.9707 14.699 13.6699C14.3606 13.4068 14.2103 12.9557 14.2103 12.3918C14.2103 11.1137 15.2628 10.2115 16.8041 10.2115C17.8191 10.2115 18.6837 10.7002 19.4731 11.6776L22.518 10.7378C21.2399 8.36953 19.3603 7.1666 16.9169 7.1666C15.3004 7.1666 13.9095 7.69288 12.7066 8.67026C11.5789 9.64764 11.015 10.9258 11.015 12.467C11.015 14.6097 12.2931 16.1886 14.8117 17.1284L16.6913 17.8426C17.8567 18.2937 18.6461 18.6696 19.022 19.008C19.3603 19.3087 19.5483 19.7598 19.5483 20.3613C19.5483 21.0003 19.3227 21.5642 18.8716 22.0529C18.3829 22.6543 17.6687 22.9175 16.6913 22.9175C15.1501 22.9175 14.2479 22.2032 13.1953 20.1733L10.188 21.1131C11.4285 24.3836 13.6088 26 16.6161 26C18.3829 26 19.849 25.4737 21.052 24.3836C22.3301 23.2558 22.9691 21.8649 22.9691 20.1733C22.8939 18.0306 21.6534 16.6021 18.7213 15.4743Z"
                fill="currentColor"
              />
              <path
                d="M14.5486 8.29309C14.5486 9.57121 13.5336 10.5486 12.2555 10.5486C10.9774 10.5486 10 9.53361 10 8.2555C10 7.65403 10.2255 7.12775 10.6766 6.67665C11.1277 6.22555 11.654 6 12.2555 6C13.5336 6 14.5486 7.01497 14.5486 8.29309Z"
                fill="#F7CD00"
              />
            </svg>
            <p
              className="sc-cbDwiu cHxPAS"
              size={14}
            >
              Slots
            </p>
          </div>
        </div>
        <div
          className="sc-hsfgio icgpki"
          opacity={0}
        >
          <div
            className="sc-ftNBoD hWicxi"
          >
            6,222.405
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-gvTkRN dMwOev"
    style={
      Object {
        "height": 446,
      }
    }
  >
    <div
      className="sc-jPGeSq gszGVP"
    >
      <button
        className="sc-eBOYpw krbLIq"
        onClick={[Function]}
      >
        <svg
          className="sc-kgflAQ sc-uoHVL  isXlMb"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.556 6.068a.5.5 0 00-.503.864l.503-.864zM16 8.652l.417.276a.5.5 0 00-.165-.708L16 8.652zm-2.634 3.065a.5.5 0 00.833.553l-.833-.553zm8.695-1.238a.5.5 0 00-.67.742l.67-.742zM12.053 6.932l3.695 2.152.504-.864-3.696-2.152-.503.864zm3.53 1.444l-2.217 3.341.833.553 2.218-3.342-.834-.552zm8.417 8.7C24 21.448 20.422 25 16 25v1c4.966 0 9-3.991 9-8.924h-1zM16 25c-4.422 0-8-3.552-8-7.924H7C7 22.009 11.034 26 16 26v-1zm-8-7.924c0-4.372 3.578-7.924 8-7.924v-1c-4.966 0-9 3.991-9 8.924h1zm13.39-5.855A7.868 7.868 0 0124 17.076h1a8.869 8.869 0 00-2.94-6.597l-.67.742z"
            fill="currentColor"
          />
        </svg>
      </button>
      <div />
      <button
        className="sc-eBOYpw krbLIq"
        onClick={[Function]}
      >
        <svg
          className="sc-gUAEMC"
          fill="none"
          fontSize="1.5rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 6.5v14.616m0 0l-4.384-4.385M16 21.115l4.385-4.384M6.5 18.923v3.654A2.923 2.923 0 009.423 25.5h13.154a2.923 2.923 0 002.923-2.923v-3.654"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
      <button
        className="sc-eBOYpw krbLIq"
        onClick={[Function]}
      >
        <svg
          className="sc-eKszNL"
          fill="none"
          fontSize="1.5rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.5 12.832V6.5h6.334m-6.33 0l18.998 19m-6.334-.005H25.5v-6.332m0-6.331V6.5h-6.334m6.33 0L6.5 25.5m6.334-.005H6.501v-6.332"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
    <div
      className="sc-dkHWjp eqPeb"
    >
      <div
        className="sc-KsaEj XGNBu"
      >
        <svg
          fill="none"
          height="40"
          viewBox="0 0 40 40"
          width="40"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M35.5.4H21.3c-.35 0-.7.3-.7.7 0 .4.3.7.7.7h14.1c1.05 0 2.05.8 2.15 1.85.1 1.2-.85 2.2-2 2.2h-31c-1.75 0-3.3 1.25-3.5 2.95a3.381 3.381 0 003.35 3.8h12.85c1.15 0 2.05.9 2.05 2.05v.65h-.65c-.4 0-.7.3-.7.7v.65h4V16c0-.4-.3-.7-.7-.7h-.65v-.65c0-1.9-1.5-3.4-3.4-3.4H4.45c-1.05 0-2.05-.8-2.15-1.85-.1-1.2.85-2.2 2-2.2h31c1.75 0 3.3-1.25 3.5-2.95.3-2.1-1.3-3.85-3.3-3.85z"
            fill="url(#Games_2_svg__paint0_linear)"
          />
          <path
            d="M35.6 39.6h-.4c-.1 0-.15-.05-.25-.05-.2 0-.45-.1-.65-.15-.3-.1-.55-.25-.8-.4-.35-.25-.75-.5-1.05-.75-.7-.55-1.35-1.2-2-1.8-.9-.9-1.8-1.85-2.6-2.85-.1-.15-.25-.25-.4-.35-.25-.15-.5-.3-.75-.4-.25-.1-.5-.1-.75-.1H13.6c-.6.1-1.1.35-1.55.85-.6.7-1.2 1.4-1.85 2.05-.7.75-1.4 1.45-2.15 2.1-.45.4-.9.75-1.35 1.1-.3.2-.6.4-.95.55-.25.1-.55.2-.85.25-.05 0-.1 0-.15.05H4.3c-.1-.05-.2-.05-.3-.05-.35-.05-.7-.15-1-.3-.55-.25-1-.65-1.3-1.15-.25-.35-.4-.75-.55-1.15-.1-.35-.2-.65-.25-1-.1-.55-.2-1.05-.25-1.5-.05-.3-.05-.6-.1-.9-.05-.4-.05-.8-.05-1.2V32v-.1c0-.05 0-.05-.05-.05V30.6c.05-.05.05-.1.05-.15 0-.15 0-.3.05-.4-.05-.3-.05-.55-.05-.85.05-.35.05-.7.1-1.05l.15-1.2c.15-.9.35-1.8.6-2.7.55-2.1 1.4-4.1 2.55-5.95.35-.6.8-1.2 1.25-1.75A8.27 8.27 0 017 14.9c.75-.5 1.5-.85 2.35-1.05.45-.1.85-.15 1.3-.2.05 0 .05 0 .1-.05h.75c.05.05.1.05.15.05.35.05.7.05 1.05.15.7.15 1.4.35 2.05.6.8.35 1.55.75 2.25 1.25.25.2.5.3.8.45.45.15.85.25 1.35.25h1.65c.4 0 .75-.05 1.1-.15.35-.1.65-.25.95-.45.3-.25.65-.45 1-.6 1.4-.75 2.85-1.3 4.45-1.4 0 0 .05 0 .05-.05h.85c.05.05.05.05.1.05.25 0 .5.05.75.1.8.15 1.6.4 2.3.8.75.45 1.45.95 2.05 1.6.6.6 1.1 1.3 1.55 2.05 1.25 2.05 2.15 4.2 2.75 6.55.25 1.05.45 2.15.6 3.25.05.6.15 1.2.15 1.8 0 .05 0 .15.05.2v2.45c0 .05 0 .15-.05.2v.55l-.15 1.5c-.05.55-.15 1.05-.25 1.6-.1.5-.25.95-.5 1.4-.25.5-.55.9-1 1.25-.45.35-1 .55-1.55.6-.2-.1-.3-.1-.4-.05z"
            fill="url(#Games_2_svg__paint1_linear)"
          />
          <g
            opacity={0.71}
          >
            <path
              d="M26.55 22.45a2.3 2.3 0 100-4.6 2.3 2.3 0 000 4.6z"
              fill="url(#Games_2_svg__paint2_linear)"
              opacity={0.75}
            />
            <path
              d="M33.455 14.024a3.65 3.65 0 101.89 7.052 3.65 3.65 0 00-1.89-7.052z"
              fill="#B760EA"
            />
            <path
              d="M28.8 29.4a2.3 2.3 0 100-4.6 2.3 2.3 0 000 4.6z"
              fill="url(#Games_2_svg__paint3_linear)"
            />
            <path
              d="M35.45 27.2a1.65 1.65 0 100-3.3 1.65 1.65 0 000 3.3z"
              fill="url(#Games_2_svg__paint4_linear)"
            />
          </g>
          <path
            d="M14.65 22.05H12.4V19.8c0-1.05-.9-1.95-1.95-1.95-1.05 0-1.95.9-1.95 1.95v2.25H6.25c-1.05 0-1.95.9-1.95 1.95 0 1.05.9 1.95 1.95 1.95H8.5v2.25c0 1.05.9 1.95 1.95 1.95 1.05 0 1.95-.9 1.95-1.95v-2.25h2.25c1.05 0 1.95-.9 1.95-1.95 0-1.05-.9-1.95-1.95-1.95z"
            fill="url(#Games_2_svg__paint5_linear)"
          />
          <defs>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Games_2_svg__paint0_linear"
              x1={51.5}
              x2={41.149}
              y1={38.75}
              y2={-7.298}
            >
              <stop
                stopColor="#1757FF"
                stopOpacity={0.7}
              />
              <stop
                offset={1}
                stopColor="#1757FF"
                stopOpacity={0}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Games_2_svg__paint1_linear"
              x1={-51.827}
              x2={41.87}
              y1={-17.13}
              y2={39.573}
            >
              <stop
                stopColor="#1757FF"
                stopOpacity={0.7}
              />
              <stop
                offset={1}
                stopColor="#1757FF"
                stopOpacity={0}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Games_2_svg__paint2_linear"
              x1={28.034}
              x2={29.642}
              y1={14.777}
              y2={22.21}
            >
              <stop
                offset={0.271}
                stopColor="#26BE6C"
              />
              <stop
                offset={0.771}
                stopColor="#77EA77"
              />
              <stop
                offset={1}
                stopColor="#6CEC80"
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Games_2_svg__paint3_linear"
              x1={27.236}
              x2={32.977}
              y1={24.801}
              y2={28.024}
            >
              <stop
                stopColor="#06BEE1"
                stopOpacity={0}
              />
              <stop
                offset={0.661}
                stopColor="#06BEE1"
                stopOpacity={0.4}
              />
              <stop
                offset={1}
                stopColor="#06BEE1"
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Games_2_svg__paint4_linear"
              x1={34.327}
              x2={37.012}
              y1={27.166}
              y2={24.429}
            >
              <stop
                stopColor="#FDBF00"
              />
              <stop
                offset={1}
                stopColor="#FDBF00"
                stopOpacity={0}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Games_2_svg__paint5_linear"
              x1={-9.508}
              x2={19.366}
              y1={11.84}
              y2={18.13}
            >
              <stop
                stopColor="#1757FF"
              />
              <stop
                offset={1}
                stopColor="#1757FF"
                stopOpacity={0}
              />
            </linearGradient>
          </defs>
        </svg>
      </div>
      <p
        className="sc-cbDwiu sc-iCxJSg LFNaq hZDxoa"
        size={20}
      >
        Top Games
      </p>
      <div
        className="sc-fgjZeG"
      >
        <div
          className="sc-gchOna dHcOqC"
        >
          <button
            className="sc-bGpPMD kGWvQu"
            onClick={[Function]}
          >
            <p
              className="sc-cbDwiu sc-kzriHz cHxPAS pAXwV"
              size={14}
            >
              by GGR
            </p>
            <svg
              className="sc-cTQhss"
              fill="none"
              fontSize="1.5rem"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25 11.5l-9 9-9-9"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      className="sc-iiHhKi kpbaKA"
    >
      <div
        className="sc-jmjsKF bmMYOo"
      >
        <div
          className="sc-hsfgio eNWXOR"
          opacity={0}
        >
          <span
            className="sc-eBOtmg iVIrSA"
          >
            1
          </span>
        </div>
        <div
          className="sc-hsfgio dKQYya"
          opacity={0}
        >
          <div
            className="sc-fWuLJ cKIxNF"
          >
            <div
              className="sc-dSqHuY hoYcED"
            >
              <div
                className="sc-IAann jzzlZa"
                size="xsmall"
              />
            </div>
            <div>
              <p
                className="sc-cbDwiu cHxPAS"
                size={14}
              >
                <span
                  style={
                    Object {
                      "maxWidth": "80px",
                      "overflow": "hidden",
                      "textOverflow": "ellipsis",
                      "whiteSpace": "nowrap",
                    }
                  }
                  title="Reactoonz 2 "
                >
                  Reactoonz 2 
                </span>
              </p>
              <p
                className="sc-cbDwiu Wkxpq"
                color="trunks.100"
                size={12}
              >
                Netent
              </p>
            </div>
          </div>
        </div>
        <div
          className="sc-hsfgio icgpki"
          opacity={0}
        >
          <div
            className="sc-ftNBoD hWicxi"
          >
            6,222.405
          </div>
        </div>
        <div
          className="sc-hsfgio eNWXOR"
          opacity={0}
        >
          <span
            className="sc-eBOtmg iVIrSA"
          >
            2
          </span>
        </div>
        <div
          className="sc-hsfgio dKQYya"
          opacity={0}
        >
          <div
            className="sc-fWuLJ cKIxNF"
          >
            <div
              className="sc-dSqHuY hoYcED"
            >
              <div
                className="sc-IAann eNygpG"
                size="xsmall"
              />
            </div>
            <div>
              <p
                className="sc-cbDwiu cHxPAS"
                size={14}
              >
                <span
                  style={
                    Object {
                      "maxWidth": "80px",
                      "overflow": "hidden",
                      "textOverflow": "ellipsis",
                      "whiteSpace": "nowrap",
                    }
                  }
                  title="Golden Tsar"
                >
                  Golden Tsar
                </span>
              </p>
              <p
                className="sc-cbDwiu Wkxpq"
                color="trunks.100"
                size={12}
              >
                Red tiger
              </p>
            </div>
          </div>
        </div>
        <div
          className="sc-hsfgio icgpki"
          opacity={0}
        >
          <div
            className="sc-ftNBoD hWicxi"
          >
            6,222.405
          </div>
        </div>
        <div
          className="sc-hsfgio eNWXOR"
          opacity={0}
        >
          <span
            className="sc-eBOtmg iVIrSA"
          >
            3
          </span>
        </div>
        <div
          className="sc-hsfgio dKQYya"
          opacity={0}
        >
          <div
            className="sc-fWuLJ cKIxNF"
          >
            <div
              className="sc-dSqHuY hoYcED"
            >
              <div
                className="sc-IAann eWtfMe"
                size="xsmall"
              />
            </div>
            <div>
              <p
                className="sc-cbDwiu cHxPAS"
                size={14}
              >
                <span
                  style={
                    Object {
                      "maxWidth": "80px",
                      "overflow": "hidden",
                      "textOverflow": "ellipsis",
                      "whiteSpace": "nowrap",
                    }
                  }
                  title="Dragons"
                >
                  Dragons
                </span>
              </p>
              <p
                className="sc-cbDwiu Wkxpq"
                color="trunks.100"
                size={12}
              >
                Microgaming
              </p>
            </div>
          </div>
        </div>
        <div
          className="sc-hsfgio icgpki"
          opacity={0}
        >
          <div
            className="sc-ftNBoD hWicxi"
          >
            6,222.405
          </div>
        </div>
        <div
          className="sc-hsfgio eNWXOR"
          opacity={0}
        >
          <span
            className="sc-eBOtmg iVIrSA"
          >
            4
          </span>
        </div>
        <div
          className="sc-hsfgio dKQYya"
          opacity={0}
        >
          <div
            className="sc-fWuLJ cKIxNF"
          >
            <div
              className="sc-dSqHuY hoYcED"
            >
              <div
                className="sc-IAann ibjhVW"
                size="xsmall"
              />
            </div>
            <div>
              <p
                className="sc-cbDwiu cHxPAS"
                size={14}
              >
                <span
                  style={
                    Object {
                      "maxWidth": "80px",
                      "overflow": "hidden",
                      "textOverflow": "ellipsis",
                      "whiteSpace": "nowrap",
                    }
                  }
                  title="Joker Max"
                >
                  Joker Max
                </span>
              </p>
              <p
                className="sc-cbDwiu Wkxpq"
                color="trunks.100"
                size={12}
              >
                Netent
              </p>
            </div>
          </div>
        </div>
        <div
          className="sc-hsfgio icgpki"
          opacity={0}
        >
          <div
            className="sc-ftNBoD hWicxi"
          >
            6,222.405
          </div>
        </div>
        <div
          className="sc-hsfgio eNWXOR"
          opacity={0}
        >
          <span
            className="sc-eBOtmg iVIrSA"
          >
            5
          </span>
        </div>
        <div
          className="sc-hsfgio dKQYya"
          opacity={0}
        >
          <div
            className="sc-fWuLJ cKIxNF"
          >
            <div
              className="sc-dSqHuY hoYcED"
            >
              <div
                className="sc-IAann eahYnO"
                size="xsmall"
              />
            </div>
            <div>
              <p
                className="sc-cbDwiu cHxPAS"
                size={14}
              >
                <span
                  style={
                    Object {
                      "maxWidth": "80px",
                      "overflow": "hidden",
                      "textOverflow": "ellipsis",
                      "whiteSpace": "nowrap",
                    }
                  }
                  title="Mad"
                >
                  Mad
                </span>
              </p>
              <p
                className="sc-cbDwiu Wkxpq"
                color="trunks.100"
                size={12}
              >
                Yggdrasil
              </p>
            </div>
          </div>
        </div>
        <div
          className="sc-hsfgio icgpki"
          opacity={0}
        >
          <div
            className="sc-ftNBoD hWicxi"
          >
            6,222.405
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table Chart renders Active 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-gvTkRN dMwOev"
    style={
      Object {
        "height": 446,
      }
    }
  >
    <div
      className="sc-jPGeSq gszGVP"
    >
      <button
        className="sc-eBOYpw krbLIq"
        onClick={[Function]}
      >
        <svg
          className="sc-kgflAQ sc-uoHVL  isXlMb"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.556 6.068a.5.5 0 00-.503.864l.503-.864zM16 8.652l.417.276a.5.5 0 00-.165-.708L16 8.652zm-2.634 3.065a.5.5 0 00.833.553l-.833-.553zm8.695-1.238a.5.5 0 00-.67.742l.67-.742zM12.053 6.932l3.695 2.152.504-.864-3.696-2.152-.503.864zm3.53 1.444l-2.217 3.341.833.553 2.218-3.342-.834-.552zm8.417 8.7C24 21.448 20.422 25 16 25v1c4.966 0 9-3.991 9-8.924h-1zM16 25c-4.422 0-8-3.552-8-7.924H7C7 22.009 11.034 26 16 26v-1zm-8-7.924c0-4.372 3.578-7.924 8-7.924v-1c-4.966 0-9 3.991-9 8.924h1zm13.39-5.855A7.868 7.868 0 0124 17.076h1a8.869 8.869 0 00-2.94-6.597l-.67.742z"
            fill="currentColor"
          />
        </svg>
      </button>
      <div />
      <button
        className="sc-eBOYpw krbLIq"
        onClick={[Function]}
      >
        <svg
          className="sc-gUAEMC"
          fill="none"
          fontSize="1.5rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 6.5v14.616m0 0l-4.384-4.385M16 21.115l4.385-4.384M6.5 18.923v3.654A2.923 2.923 0 009.423 25.5h13.154a2.923 2.923 0 002.923-2.923v-3.654"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
      <button
        className="sc-eBOYpw krbLIq"
        onClick={[Function]}
      >
        <svg
          className="sc-eKszNL"
          fill="none"
          fontSize="1.5rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.5 12.832V6.5h6.334m-6.33 0l18.998 19m-6.334-.005H25.5v-6.332m0-6.331V6.5h-6.334m6.33 0L6.5 25.5m6.334-.005H6.501v-6.332"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
    <div
      className="sc-dkHWjp eqPeb"
    >
      <div
        className="sc-KsaEj XGNBu"
      >
        <svg
          fill="none"
          height="40"
          width="40"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M22.568 19.92a2.529 2.529 0 011.714-2.397 13.484 13.484 0 009.11-11.358 1.011 1.011 0 00-1.001-1.124H7.605a1.011 1.011 0 00-1.002 1.124 13.493 13.493 0 009.11 11.358 2.528 2.528 0 011.714 2.397 2.528 2.528 0 01-1.713 2.407 13.484 13.484 0 00-9.111 11.358 1.002 1.002 0 001.002 1.114H32.39a1.002 1.002 0 001.002-1.114 13.464 13.464 0 00-9.111-11.358 2.528 2.528 0 01-1.714-2.407z"
            fill="url(#paint0_linear)"
            opacity=".85"
          />
          <path
            d="M35.116 34.032H4.88a.88.88 0 00-.88.88v3.708c0 .486.394.88.88.88h30.236a.88.88 0 00.88-.88v-3.708a.88.88 0 00-.88-.88z"
            fill="url(#paint1_linear)"
            opacity=".75"
          />
          <path
            d="M35.116.5H4.88a.88.88 0 00-.88.88v3.708c0 .486.394.88.88.88h30.236a.88.88 0 00.88-.88V1.38a.88.88 0 00-.88-.88z"
            fill="url(#paint2_linear)"
            opacity=".85"
          />
          <path
            d="M16.173 23.516a9.804 9.804 0 007.622 2.81c4.869-.31 4.242-.282 4.242-.282S12.259 32.618 11.95 30.53c-.31-2.089 1.75-6.106 4.223-7.014z"
            fill="url(#paint3_linear)"
            opacity=".85"
          />
          <path
            d="M28.027 25.997c-5.094.993-12.79 3.062-14.373 1.517-1.583-1.545 2.519-4.007 2.519-4.007s-.562.262-.89.402a12.174 12.174 0 00-7.163 8.643.768.768 0 00.73.936h22.305a.758.758 0 00.73-.936 12.173 12.173 0 00-3.858-6.555z"
            fill="url(#paint4_linear)"
          />
          <path
            d="M28.477 11.259a1.891 1.891 0 100-3.783 1.891 1.891 0 000 3.783zM27.522 27.683a1.208 1.208 0 100-2.416 1.208 1.208 0 000 2.416z"
            fill="#fff"
          />
          <defs>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="paint0_linear"
              x1="-29.284"
              x2="48.283"
              y1="-29.996"
              y2="-1.738"
            >
              <stop
                stopColor="#1757FF"
                stopOpacity=".7"
              />
              <stop
                offset="1"
                stopColor="#1757FF"
                stopOpacity="0"
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="paint1_linear"
              x1="-31.92"
              x2="-1.943"
              y1="31.36"
              y2="69.567"
            >
              <stop
                stopColor="#1757FF"
              />
              <stop
                offset="1"
                stopColor="#1757FF"
                stopOpacity="0"
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="paint2_linear"
              x1="-31.92"
              x2="-1.943"
              y1="-2.172"
              y2="36.036"
            >
              <stop
                stopColor="#1757FF"
              />
              <stop
                offset="1"
                stopColor="#1757FF"
                stopOpacity="0"
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="paint3_linear"
              x1="11.919"
              x2="496.886"
              y1="180.218"
              y2="180.218"
            >
              <stop
                stopColor="#D3B3DB"
              />
              <stop
                offset=".32"
                stopColor="#BA95C9"
              />
              <stop
                offset=".64"
                stopColor="#A67DBB"
              />
              <stop
                offset=".84"
                stopColor="#9F74B6"
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="paint4_linear"
              x1="8.101"
              x2="31.894"
              y1="28.488"
              y2="28.488"
            >
              <stop
                stopColor="#D3B3DB"
              />
              <stop
                offset=".32"
                stopColor="#BA95C9"
              />
              <stop
                offset=".64"
                stopColor="#A67DBB"
              />
              <stop
                offset=".84"
                stopColor="#9F74B6"
              />
            </linearGradient>
          </defs>
        </svg>
      </div>
      <p
        className="sc-cbDwiu sc-iCxJSg LFNaq hZDxoa"
        size={20}
      >
        Yesterday
      </p>
      <div
        className="sc-fgjZeG"
      >
        <div
          className="sc-gchOna dHcOqC"
        >
          <button
            className="sc-bGpPMD kGWvQu"
            onClick={[Function]}
          >
            <p
              className="sc-cbDwiu sc-kzriHz cHxPAS pAXwV"
              size={14}
            >
              by all devices
            </p>
            <svg
              className="sc-cTQhss"
              fill="none"
              fontSize="1.5rem"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25 11.5l-9 9-9-9"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      className="sc-iiHhKi kpbaKA"
    >
      <div
        className="sc-jmjsKF bmMYOo"
      >
        <div
          className="sc-hsfgio eNWXOR"
          opacity={0}
        >
          <span
            className="sc-eBOtmg iVIrSA"
          >
            1
          </span>
        </div>
        <div
          className="sc-hsfgio dKQYya"
          opacity={0}
        >
          <div
            className="sc-fWuLJ cKIxNF"
          >
            Active players
          </div>
        </div>
        <div
          className="sc-hsfgio icgpki"
          opacity={0}
        >
          <div
            className="sc-ftNBoD hWicxi"
          >
            2,786
          </div>
        </div>
        <div
          className="sc-hsfgio eNWXOR"
          opacity={0}
        >
          <span
            className="sc-eBOtmg iVIrSA"
          >
            2
          </span>
        </div>
        <div
          className="sc-hsfgio dKQYya"
          opacity={0}
        >
          <div
            className="sc-fWuLJ cKIxNF"
          >
            Turnover
          </div>
        </div>
        <div
          className="sc-hsfgio icgpki"
          opacity={0}
        >
          <div
            className="sc-ftNBoD hWicxi"
          >
            €8,765.45
          </div>
        </div>
        <div
          className="sc-hsfgio eNWXOR"
          opacity={0}
        >
          <span
            className="sc-eBOtmg iVIrSA"
          >
            3
          </span>
        </div>
        <div
          className="sc-hsfgio dKQYya"
          opacity={0}
        >
          <div
            className="sc-fWuLJ cKIxNF"
          >
            GGR
          </div>
        </div>
        <div
          className="sc-hsfgio icgpki"
          opacity={0}
        >
          <div
            className="sc-ftNBoD hWicxi"
          >
            15,873.98
          </div>
        </div>
        <div
          className="sc-hsfgio eNWXOR"
          opacity={0}
        >
          <span
            className="sc-eBOtmg iVIrSA"
          >
            4
          </span>
        </div>
        <div
          className="sc-hsfgio dKQYya"
          opacity={0}
        >
          <div
            className="sc-fWuLJ cKIxNF"
          >
            Bets
          </div>
        </div>
        <div
          className="sc-hsfgio icgpki"
          opacity={0}
        >
          <div
            className="sc-ftNBoD hWicxi"
          >
            6,763
          </div>
        </div>
        <div
          className="sc-hsfgio eNWXOR"
          opacity={0}
        >
          <span
            className="sc-eBOtmg iVIrSA"
          >
            5
          </span>
        </div>
        <div
          className="sc-hsfgio dKQYya"
          opacity={0}
        >
          <div
            className="sc-fWuLJ cKIxNF"
          >
            Margin
          </div>
        </div>
        <div
          className="sc-hsfgio icgpki"
          opacity={0}
        >
          <div
            className="sc-ftNBoD hWicxi"
          >
            5.38%
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-gvTkRN iQoAcM"
    style={
      Object {
        "height": 446,
      }
    }
  >
    <div
      className="sc-jPGeSq gszGVP"
    >
      <button
        className="sc-eBOYpw krbLIq"
        onClick={[Function]}
      >
        <svg
          className="sc-kgflAQ sc-uoHVL  isXlMb"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.556 6.068a.5.5 0 00-.503.864l.503-.864zM16 8.652l.417.276a.5.5 0 00-.165-.708L16 8.652zm-2.634 3.065a.5.5 0 00.833.553l-.833-.553zm8.695-1.238a.5.5 0 00-.67.742l.67-.742zM12.053 6.932l3.695 2.152.504-.864-3.696-2.152-.503.864zm3.53 1.444l-2.217 3.341.833.553 2.218-3.342-.834-.552zm8.417 8.7C24 21.448 20.422 25 16 25v1c4.966 0 9-3.991 9-8.924h-1zM16 25c-4.422 0-8-3.552-8-7.924H7C7 22.009 11.034 26 16 26v-1zm-8-7.924c0-4.372 3.578-7.924 8-7.924v-1c-4.966 0-9 3.991-9 8.924h1zm13.39-5.855A7.868 7.868 0 0124 17.076h1a8.869 8.869 0 00-2.94-6.597l-.67.742z"
            fill="currentColor"
          />
        </svg>
      </button>
      <div />
      <button
        className="sc-eBOYpw krbLIq"
        onClick={[Function]}
      >
        <svg
          className="sc-gUAEMC"
          fill="none"
          fontSize="1.5rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 6.5v14.616m0 0l-4.384-4.385M16 21.115l4.385-4.384M6.5 18.923v3.654A2.923 2.923 0 009.423 25.5h13.154a2.923 2.923 0 002.923-2.923v-3.654"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
      <button
        className="sc-eBOYpw krbLIq"
        onClick={[Function]}
      >
        <svg
          className="sc-eKszNL"
          fill="none"
          fontSize="1.5rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.5 12.832V6.5h6.334m-6.33 0l18.998 19m-6.334-.005H25.5v-6.332m0-6.331V6.5h-6.334m6.33 0L6.5 25.5m6.334-.005H6.501v-6.332"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
    <div
      className="sc-dkHWjp pzgHU"
    >
      <div
        className="sc-KsaEj XGNBu"
      >
        <svg
          fill="none"
          height="40"
          viewBox="0 0 40 40"
          width="40"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M22.568 19.92a2.529 2.529 0 011.714-2.397 13.484 13.484 0 009.11-11.358 1.011 1.011 0 00-1.001-1.124H7.605a1.011 1.011 0 00-1.002 1.124 13.493 13.493 0 009.11 11.358 2.527 2.527 0 011.714 2.397 2.529 2.529 0 01-1.713 2.406 13.483 13.483 0 00-9.111 11.359 1.002 1.002 0 001.002 1.114H32.39a1 1 0 001.002-1.114 13.464 13.464 0 00-9.111-11.359 2.528 2.528 0 01-1.714-2.406z"
            fill="url(#Time_svg__paint0_linear)"
          />
          <path
            d="M35.116 34.031H4.88a.88.88 0 00-.88.88v3.709c0 .486.394.88.88.88h30.236a.88.88 0 00.88-.88V34.91a.88.88 0 00-.88-.88z"
            fill="url(#Time_svg__paint1_linear)"
            opacity={0.75}
          />
          <path
            d="M35.116.5H4.88a.88.88 0 00-.88.88v3.708c0 .486.394.88.88.88h30.236a.88.88 0 00.88-.88V1.38a.88.88 0 00-.88-.88z"
            fill="url(#Time_svg__paint2_linear)"
            opacity={0.85}
          />
          <path
            d="M16.173 23.516a9.804 9.804 0 007.622 2.809c4.869-.31 4.242-.281 4.242-.281s-15.778 6.573-16.087 4.485c-.31-2.088 1.75-6.105 4.223-7.013z"
            fill="url(#Time_svg__paint3_linear)"
            opacity={0.85}
          />
          <path
            d="M28.027 25.998c-5.094.992-12.79 3.061-14.373 1.517-1.583-1.546 2.519-4.008 2.519-4.008s-.562.262-.89.402a12.173 12.173 0 00-7.163 8.643.768.768 0 00.73.937h22.305a.758.758 0 00.73-.937 12.172 12.172 0 00-3.858-6.554z"
            fill="url(#Time_svg__paint4_linear)"
          />
          <path
            d="M28.477 11.258a1.891 1.891 0 100-3.782 1.891 1.891 0 000 3.782zM27.522 27.683a1.208 1.208 0 100-2.415 1.208 1.208 0 000 2.415z"
            fill="#fff"
          />
          <defs>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Time_svg__paint0_linear"
              x1={-11.5}
              x2={42.458}
              y1={-6.5}
              y2={10.698}
            >
              <stop
                stopColor="#fff"
              />
              <stop
                offset={1}
                stopColor="#fff"
                stopOpacity={0.27}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Time_svg__paint1_linear"
              x1={-17.603}
              x2={-4.183}
              y1={31.91}
              y2={59.698}
            >
              <stop
                stopColor="#fff"
              />
              <stop
                offset={1}
                stopColor="#fff"
                stopOpacity={0.27}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Time_svg__paint2_linear"
              x1={-17.603}
              x2={-4.183}
              y1={-1.621}
              y2={26.167}
            >
              <stop
                stopColor="#fff"
              />
              <stop
                offset={1}
                stopColor="#fff"
                stopOpacity={0.27}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Time_svg__paint3_linear"
              x1={11.919}
              x2={496.886}
              y1={180.218}
              y2={180.218}
            >
              <stop
                stopColor="#D3B3DB"
              />
              <stop
                offset={0.32}
                stopColor="#BA95C9"
              />
              <stop
                offset={0.64}
                stopColor="#A67DBB"
              />
              <stop
                offset={0.84}
                stopColor="#9F74B6"
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Time_svg__paint4_linear"
              x1={8.101}
              x2={31.894}
              y1={28.488}
              y2={28.488}
            >
              <stop
                stopColor="#D3B3DB"
              />
              <stop
                offset={0.32}
                stopColor="#BA95C9"
              />
              <stop
                offset={0.64}
                stopColor="#A67DBB"
              />
              <stop
                offset={0.84}
                stopColor="#9F74B6"
              />
            </linearGradient>
          </defs>
        </svg>
      </div>
      <p
        className="sc-cbDwiu sc-iCxJSg LFNaq hZDxoa"
        size={20}
      >
        Today
      </p>
      <div
        className="sc-fgjZeG"
      >
        <div
          className="sc-gchOna dHcOqC"
        >
          <button
            className="sc-bGpPMD kGWvQu"
            onClick={[Function]}
          >
            <p
              className="sc-cbDwiu sc-kzriHz cHxPAS pAXwV"
              size={14}
            >
              by all devices
            </p>
            <svg
              className="sc-cTQhss"
              fill="none"
              fontSize="1.5rem"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25 11.5l-9 9-9-9"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      className="sc-iiHhKi jjENrE"
    >
      <div
        className="sc-jmjsKF bmMYOo"
      >
        <div
          className="sc-hsfgio eNWXOR"
          opacity={0}
        >
          <span
            className="sc-eBOtmg iVIrSA"
          >
            1
          </span>
        </div>
        <div
          className="sc-hsfgio dKQYya"
          opacity={0}
        >
          <div
            className="sc-fWuLJ cKIxNF"
          >
            Active players
          </div>
        </div>
        <div
          className="sc-hsfgio icgpki"
          opacity={0}
        >
          <div
            className="sc-ftNBoD hWicxi"
          >
            2,786
          </div>
        </div>
        <div
          className="sc-hsfgio eNWXOR"
          opacity={0}
        >
          <span
            className="sc-eBOtmg iVIrSA"
          >
            2
          </span>
        </div>
        <div
          className="sc-hsfgio dKQYya"
          opacity={0}
        >
          <div
            className="sc-fWuLJ cKIxNF"
          >
            Turnover
          </div>
        </div>
        <div
          className="sc-hsfgio icgpki"
          opacity={0}
        >
          <div
            className="sc-ftNBoD hWicxi"
          >
            €8,765.45
          </div>
        </div>
        <div
          className="sc-hsfgio eNWXOR"
          opacity={0}
        >
          <span
            className="sc-eBOtmg iVIrSA"
          >
            3
          </span>
        </div>
        <div
          className="sc-hsfgio dKQYya"
          opacity={0}
        >
          <div
            className="sc-fWuLJ cKIxNF"
          >
            GGR
          </div>
        </div>
        <div
          className="sc-hsfgio icgpki"
          opacity={0}
        >
          <div
            className="sc-ftNBoD hWicxi"
          >
            15,873.98
          </div>
        </div>
        <div
          className="sc-hsfgio eNWXOR"
          opacity={0}
        >
          <span
            className="sc-eBOtmg iVIrSA"
          >
            4
          </span>
        </div>
        <div
          className="sc-hsfgio dKQYya"
          opacity={0}
        >
          <div
            className="sc-fWuLJ cKIxNF"
          >
            Bets
          </div>
        </div>
        <div
          className="sc-hsfgio icgpki"
          opacity={0}
        >
          <div
            className="sc-ftNBoD hWicxi"
          >
            6,763
          </div>
        </div>
        <div
          className="sc-hsfgio eNWXOR"
          opacity={0}
        >
          <span
            className="sc-eBOtmg iVIrSA"
          >
            5
          </span>
        </div>
        <div
          className="sc-hsfgio dKQYya"
          opacity={0}
        >
          <div
            className="sc-fWuLJ cKIxNF"
          >
            Margin
          </div>
        </div>
        <div
          className="sc-hsfgio icgpki"
          opacity={0}
        >
          <div
            className="sc-ftNBoD hWicxi"
          >
            5.38%
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table Chart renders Loading 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-gvTkRN dMwOev"
    style={
      Object {
        "height": 446,
      }
    }
  >
    <div
      className="sc-jPGeSq gszGVP"
    >
      <button
        className="sc-eBOYpw krbLIq"
        onClick={[Function]}
      >
        <svg
          className="sc-kgflAQ sc-uoHVL  isXlMb"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.556 6.068a.5.5 0 00-.503.864l.503-.864zM16 8.652l.417.276a.5.5 0 00-.165-.708L16 8.652zm-2.634 3.065a.5.5 0 00.833.553l-.833-.553zm8.695-1.238a.5.5 0 00-.67.742l.67-.742zM12.053 6.932l3.695 2.152.504-.864-3.696-2.152-.503.864zm3.53 1.444l-2.217 3.341.833.553 2.218-3.342-.834-.552zm8.417 8.7C24 21.448 20.422 25 16 25v1c4.966 0 9-3.991 9-8.924h-1zM16 25c-4.422 0-8-3.552-8-7.924H7C7 22.009 11.034 26 16 26v-1zm-8-7.924c0-4.372 3.578-7.924 8-7.924v-1c-4.966 0-9 3.991-9 8.924h1zm13.39-5.855A7.868 7.868 0 0124 17.076h1a8.869 8.869 0 00-2.94-6.597l-.67.742z"
            fill="currentColor"
          />
        </svg>
      </button>
      <div />
      <button
        className="sc-eBOYpw krbLIq"
        onClick={[Function]}
      >
        <svg
          className="sc-gUAEMC"
          fill="none"
          fontSize="1.5rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 6.5v14.616m0 0l-4.384-4.385M16 21.115l4.385-4.384M6.5 18.923v3.654A2.923 2.923 0 009.423 25.5h13.154a2.923 2.923 0 002.923-2.923v-3.654"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
      <button
        className="sc-eBOYpw krbLIq"
        onClick={[Function]}
      >
        <svg
          className="sc-eKszNL"
          fill="none"
          fontSize="1.5rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.5 12.832V6.5h6.334m-6.33 0l18.998 19m-6.334-.005H25.5v-6.332m0-6.331V6.5h-6.334m6.33 0L6.5 25.5m6.334-.005H6.501v-6.332"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
    <div
      className="sc-dkHWjp eqPeb"
    >
      <div
        className="sc-KsaEj XGNBu"
      >
        <svg
          fill="none"
          height="40"
          width="40"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M22.568 19.92a2.529 2.529 0 011.714-2.397 13.484 13.484 0 009.11-11.358 1.011 1.011 0 00-1.001-1.124H7.605a1.011 1.011 0 00-1.002 1.124 13.493 13.493 0 009.11 11.358 2.528 2.528 0 011.714 2.397 2.528 2.528 0 01-1.713 2.407 13.484 13.484 0 00-9.111 11.358 1.002 1.002 0 001.002 1.114H32.39a1.002 1.002 0 001.002-1.114 13.464 13.464 0 00-9.111-11.358 2.528 2.528 0 01-1.714-2.407z"
            fill="url(#paint0_linear)"
            opacity=".85"
          />
          <path
            d="M35.116 34.032H4.88a.88.88 0 00-.88.88v3.708c0 .486.394.88.88.88h30.236a.88.88 0 00.88-.88v-3.708a.88.88 0 00-.88-.88z"
            fill="url(#paint1_linear)"
            opacity=".75"
          />
          <path
            d="M35.116.5H4.88a.88.88 0 00-.88.88v3.708c0 .486.394.88.88.88h30.236a.88.88 0 00.88-.88V1.38a.88.88 0 00-.88-.88z"
            fill="url(#paint2_linear)"
            opacity=".85"
          />
          <path
            d="M16.173 23.516a9.804 9.804 0 007.622 2.81c4.869-.31 4.242-.282 4.242-.282S12.259 32.618 11.95 30.53c-.31-2.089 1.75-6.106 4.223-7.014z"
            fill="url(#paint3_linear)"
            opacity=".85"
          />
          <path
            d="M28.027 25.997c-5.094.993-12.79 3.062-14.373 1.517-1.583-1.545 2.519-4.007 2.519-4.007s-.562.262-.89.402a12.174 12.174 0 00-7.163 8.643.768.768 0 00.73.936h22.305a.758.758 0 00.73-.936 12.173 12.173 0 00-3.858-6.555z"
            fill="url(#paint4_linear)"
          />
          <path
            d="M28.477 11.259a1.891 1.891 0 100-3.783 1.891 1.891 0 000 3.783zM27.522 27.683a1.208 1.208 0 100-2.416 1.208 1.208 0 000 2.416z"
            fill="#fff"
          />
          <defs>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="paint0_linear"
              x1="-29.284"
              x2="48.283"
              y1="-29.996"
              y2="-1.738"
            >
              <stop
                stopColor="#1757FF"
                stopOpacity=".7"
              />
              <stop
                offset="1"
                stopColor="#1757FF"
                stopOpacity="0"
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="paint1_linear"
              x1="-31.92"
              x2="-1.943"
              y1="31.36"
              y2="69.567"
            >
              <stop
                stopColor="#1757FF"
              />
              <stop
                offset="1"
                stopColor="#1757FF"
                stopOpacity="0"
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="paint2_linear"
              x1="-31.92"
              x2="-1.943"
              y1="-2.172"
              y2="36.036"
            >
              <stop
                stopColor="#1757FF"
              />
              <stop
                offset="1"
                stopColor="#1757FF"
                stopOpacity="0"
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="paint3_linear"
              x1="11.919"
              x2="496.886"
              y1="180.218"
              y2="180.218"
            >
              <stop
                stopColor="#D3B3DB"
              />
              <stop
                offset=".32"
                stopColor="#BA95C9"
              />
              <stop
                offset=".64"
                stopColor="#A67DBB"
              />
              <stop
                offset=".84"
                stopColor="#9F74B6"
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="paint4_linear"
              x1="8.101"
              x2="31.894"
              y1="28.488"
              y2="28.488"
            >
              <stop
                stopColor="#D3B3DB"
              />
              <stop
                offset=".32"
                stopColor="#BA95C9"
              />
              <stop
                offset=".64"
                stopColor="#A67DBB"
              />
              <stop
                offset=".84"
                stopColor="#9F74B6"
              />
            </linearGradient>
          </defs>
        </svg>
      </div>
      <p
        className="sc-cbDwiu sc-iCxJSg LFNaq hZDxoa"
        size={20}
      >
        Yesterday
      </p>
      <div
        className="sc-fgjZeG"
      >
        <div
          className="sc-gchOna dHcOqC"
        >
          <button
            className="sc-bGpPMD kGWvQu"
            onClick={[Function]}
          >
            <p
              className="sc-cbDwiu sc-kzriHz cHxPAS pAXwV"
              size={14}
            >
              by all devices
            </p>
            <svg
              className="sc-cTQhss"
              fill="none"
              fontSize="1.5rem"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25 11.5l-9 9-9-9"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      className="sc-dAIixb fzmKVy"
    >
      <svg
        fill="none"
        height="160"
        width="160"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M96 0H0v19.876h96V0z"
          fill="#D8E0E3"
        />
        <path
          d="M96 0h64v19.876H96V0z"
          fill="#EAEEF0"
        />
        <path
          d="M137.001 46.708h-137v19.876h137V46.708z"
          fill="#D8E0E3"
        />
        <path
          d="M137.001 46.708h7v19.876h-7V46.708z"
          fill="#EAEEF0"
        />
        <path
          d="M42.001 93.416h-42v19.876h42V93.416z"
          fill="#D8E0E3"
        />
        <path
          d="M42.001 93.416h118v19.876h-118V93.416z"
          fill="#EAEEF0"
        />
        <path
          d="M96 140.124H0V160h96v-19.876z"
          fill="#D8E0E3"
        />
        <path
          d="M96 140.124h49V160H96v-19.876z"
          fill="#EAEEF0"
        />
      </svg>
      <p
        className="sc-cbDwiu sc-hGzUJM iVaTpZ bmEqio"
        color="trunks.100"
        size={14}
      >
        Loading...
      </p>
    </div>
  </div>
  <div
    className="sc-gvTkRN dMwOev"
    style={
      Object {
        "height": 446,
      }
    }
  >
    <div
      className="sc-jPGeSq gszGVP"
    >
      <button
        className="sc-eBOYpw krbLIq"
        onClick={[Function]}
      >
        <svg
          className="sc-kgflAQ sc-uoHVL  isXlMb"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.556 6.068a.5.5 0 00-.503.864l.503-.864zM16 8.652l.417.276a.5.5 0 00-.165-.708L16 8.652zm-2.634 3.065a.5.5 0 00.833.553l-.833-.553zm8.695-1.238a.5.5 0 00-.67.742l.67-.742zM12.053 6.932l3.695 2.152.504-.864-3.696-2.152-.503.864zm3.53 1.444l-2.217 3.341.833.553 2.218-3.342-.834-.552zm8.417 8.7C24 21.448 20.422 25 16 25v1c4.966 0 9-3.991 9-8.924h-1zM16 25c-4.422 0-8-3.552-8-7.924H7C7 22.009 11.034 26 16 26v-1zm-8-7.924c0-4.372 3.578-7.924 8-7.924v-1c-4.966 0-9 3.991-9 8.924h1zm13.39-5.855A7.868 7.868 0 0124 17.076h1a8.869 8.869 0 00-2.94-6.597l-.67.742z"
            fill="currentColor"
          />
        </svg>
      </button>
      <div />
      <button
        className="sc-eBOYpw krbLIq"
        onClick={[Function]}
      >
        <svg
          className="sc-gUAEMC"
          fill="none"
          fontSize="1.5rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 6.5v14.616m0 0l-4.384-4.385M16 21.115l4.385-4.384M6.5 18.923v3.654A2.923 2.923 0 009.423 25.5h13.154a2.923 2.923 0 002.923-2.923v-3.654"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
      <button
        className="sc-eBOYpw krbLIq"
        onClick={[Function]}
      >
        <svg
          className="sc-eKszNL"
          fill="none"
          fontSize="1.5rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.5 12.832V6.5h6.334m-6.33 0l18.998 19m-6.334-.005H25.5v-6.332m0-6.331V6.5h-6.334m6.33 0L6.5 25.5m6.334-.005H6.501v-6.332"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
    <div
      className="sc-dkHWjp eqPeb"
    >
      <div
        className="sc-KsaEj XGNBu"
      >
        <svg
          fill="none"
          height="40"
          width="40"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M22.568 19.92a2.529 2.529 0 011.714-2.397 13.484 13.484 0 009.11-11.358 1.011 1.011 0 00-1.001-1.124H7.605a1.011 1.011 0 00-1.002 1.124 13.493 13.493 0 009.11 11.358 2.528 2.528 0 011.714 2.397 2.528 2.528 0 01-1.713 2.407 13.484 13.484 0 00-9.111 11.358 1.002 1.002 0 001.002 1.114H32.39a1.002 1.002 0 001.002-1.114 13.464 13.464 0 00-9.111-11.358 2.528 2.528 0 01-1.714-2.407z"
            fill="url(#paint0_linear)"
            opacity=".85"
          />
          <path
            d="M35.116 34.032H4.88a.88.88 0 00-.88.88v3.708c0 .486.394.88.88.88h30.236a.88.88 0 00.88-.88v-3.708a.88.88 0 00-.88-.88z"
            fill="url(#paint1_linear)"
            opacity=".75"
          />
          <path
            d="M35.116.5H4.88a.88.88 0 00-.88.88v3.708c0 .486.394.88.88.88h30.236a.88.88 0 00.88-.88V1.38a.88.88 0 00-.88-.88z"
            fill="url(#paint2_linear)"
            opacity=".85"
          />
          <path
            d="M16.173 23.516a9.804 9.804 0 007.622 2.81c4.869-.31 4.242-.282 4.242-.282S12.259 32.618 11.95 30.53c-.31-2.089 1.75-6.106 4.223-7.014z"
            fill="url(#paint3_linear)"
            opacity=".85"
          />
          <path
            d="M28.027 25.997c-5.094.993-12.79 3.062-14.373 1.517-1.583-1.545 2.519-4.007 2.519-4.007s-.562.262-.89.402a12.174 12.174 0 00-7.163 8.643.768.768 0 00.73.936h22.305a.758.758 0 00.73-.936 12.173 12.173 0 00-3.858-6.555z"
            fill="url(#paint4_linear)"
          />
          <path
            d="M28.477 11.259a1.891 1.891 0 100-3.783 1.891 1.891 0 000 3.783zM27.522 27.683a1.208 1.208 0 100-2.416 1.208 1.208 0 000 2.416z"
            fill="#fff"
          />
          <defs>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="paint0_linear"
              x1="-29.284"
              x2="48.283"
              y1="-29.996"
              y2="-1.738"
            >
              <stop
                stopColor="#1757FF"
                stopOpacity=".7"
              />
              <stop
                offset="1"
                stopColor="#1757FF"
                stopOpacity="0"
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="paint1_linear"
              x1="-31.92"
              x2="-1.943"
              y1="31.36"
              y2="69.567"
            >
              <stop
                stopColor="#1757FF"
              />
              <stop
                offset="1"
                stopColor="#1757FF"
                stopOpacity="0"
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="paint2_linear"
              x1="-31.92"
              x2="-1.943"
              y1="-2.172"
              y2="36.036"
            >
              <stop
                stopColor="#1757FF"
              />
              <stop
                offset="1"
                stopColor="#1757FF"
                stopOpacity="0"
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="paint3_linear"
              x1="11.919"
              x2="496.886"
              y1="180.218"
              y2="180.218"
            >
              <stop
                stopColor="#D3B3DB"
              />
              <stop
                offset=".32"
                stopColor="#BA95C9"
              />
              <stop
                offset=".64"
                stopColor="#A67DBB"
              />
              <stop
                offset=".84"
                stopColor="#9F74B6"
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="paint4_linear"
              x1="8.101"
              x2="31.894"
              y1="28.488"
              y2="28.488"
            >
              <stop
                stopColor="#D3B3DB"
              />
              <stop
                offset=".32"
                stopColor="#BA95C9"
              />
              <stop
                offset=".64"
                stopColor="#A67DBB"
              />
              <stop
                offset=".84"
                stopColor="#9F74B6"
              />
            </linearGradient>
          </defs>
        </svg>
      </div>
      <p
        className="sc-cbDwiu sc-iCxJSg LFNaq hZDxoa"
        size={20}
      >
        Yesterday
      </p>
      <div
        className="sc-fgjZeG"
      >
        <div
          className="sc-gchOna dHcOqC"
        >
          <button
            className="sc-bGpPMD kGWvQu"
            onClick={[Function]}
          >
            <p
              className="sc-cbDwiu sc-kzriHz cHxPAS pAXwV"
              size={14}
            >
              by all devices
            </p>
            <svg
              className="sc-cTQhss"
              fill="none"
              fontSize="1.5rem"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25 11.5l-9 9-9-9"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      className="sc-iiHhKi kpbaKA"
    >
      <div
        className="sc-jmjsKF bmMYOo"
      >
        <div
          className="sc-hsfgio eNWXOR"
          opacity={0}
        >
          <span
            className="sc-eBOtmg iVIrSA"
          >
            1
          </span>
        </div>
        <div
          className="sc-hsfgio dKQYya"
          opacity={0}
        >
          <div
            className="sc-fWuLJ cKIxNF"
          >
            Active players
          </div>
        </div>
        <div
          className="sc-hsfgio icgpki"
          opacity={0}
        >
          <div
            className="sc-ftNBoD hWicxi"
          >
            2,786
          </div>
        </div>
        <div
          className="sc-hsfgio eNWXOR"
          opacity={0}
        >
          <span
            className="sc-eBOtmg iVIrSA"
          >
            2
          </span>
        </div>
        <div
          className="sc-hsfgio dKQYya"
          opacity={0}
        >
          <div
            className="sc-fWuLJ cKIxNF"
          >
            Turnover
          </div>
        </div>
        <div
          className="sc-hsfgio icgpki"
          opacity={0}
        >
          <div
            className="sc-ftNBoD hWicxi"
          >
            €8,765.45
          </div>
        </div>
        <div
          className="sc-hsfgio eNWXOR"
          opacity={0}
        >
          <span
            className="sc-eBOtmg iVIrSA"
          >
            3
          </span>
        </div>
        <div
          className="sc-hsfgio dKQYya"
          opacity={0}
        >
          <div
            className="sc-fWuLJ cKIxNF"
          >
            GGR
          </div>
        </div>
        <div
          className="sc-hsfgio icgpki"
          opacity={0}
        >
          <div
            className="sc-ftNBoD hWicxi"
          >
            15,873.98
          </div>
        </div>
        <div
          className="sc-hsfgio eNWXOR"
          opacity={0}
        >
          <span
            className="sc-eBOtmg iVIrSA"
          >
            4
          </span>
        </div>
        <div
          className="sc-hsfgio dKQYya"
          opacity={0}
        >
          <div
            className="sc-fWuLJ cKIxNF"
          >
            Bets
          </div>
        </div>
        <div
          className="sc-hsfgio icgpki"
          opacity={0}
        >
          <div
            className="sc-ftNBoD hWicxi"
          >
            6,763
          </div>
        </div>
        <div
          className="sc-hsfgio eNWXOR"
          opacity={0}
        >
          <span
            className="sc-eBOtmg iVIrSA"
          >
            5
          </span>
        </div>
        <div
          className="sc-hsfgio dKQYya"
          opacity={0}
        >
          <div
            className="sc-fWuLJ cKIxNF"
          >
            Margin
          </div>
        </div>
        <div
          className="sc-hsfgio icgpki"
          opacity={0}
        >
          <div
            className="sc-ftNBoD hWicxi"
          >
            5.38%
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
